package pl.put.poznan.texttransformer;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TextTransformerApplication {

	public static void main(String[] args) {
		SpringApplication.run(TextTransformerApplication.class, args);
	}

}
