package pl.put.poznan.texttransformer.service;

public interface TextTransformerService {

    String transform(String type, String text);
}
